<resources>
    <string name="app_name">TaskManager</string>
    <string name="nav_home">Dashboard</string>
    <string name="nav_requested">Requested Tasks</string>
    <string name="nav_started">Tasks Started</string>
    <string name="nav_completed">Tasks Completed</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_logout">Logout</string>
    <string name="created_by">Created by Cima Digital</string>
    <string name="logo_content_description">This is the logo image</string>
    <string name="open_nav">Open navigation drawer</string>
    <string name="close_nav">Close navigation drawer</string>
    <string name="enter_email_password">Please enter email and password</string>
    <string name="login_successful">Login Successful</string>
    <string name="login_failed">Login Failed: %1$s</string>
    <string name="register">Create a new account</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter your password</string>
    <string name="already_have_account">Do you already have an account?</string>
    <string name="register_button">Register</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="registration_failed">Registration Failed: %1$s</string>

    <string name="default_notification_channel_id">task_manager_channel</string>
    <string name="default_notification_channel_name">Task Manager Notifications</string>
    <string name="default_notification_channel_description">Notifications for Task Manager app</string>


    <string name="task_description">Description</string>
    <string name="task_date">Date</string>
    <string name="task_time">Time</string>
    <string name="client_name">Client Name</string>
    <string name="client_address">Client Address</string>


    <string name="start_task">Start Task</string>
    <string name="start_task_confirmation">Are you sure you want to start the task?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="description_hint">Description</string>
    <string name="voice_input">Voice Input</string>
    <string name="take_photo">Take Photo</string>
    <string name="submit">Submit</string>
    <string name="form_submit_failed">Form submission failed</string>
    <string name="permission_denied">Permission denied</string>
    <string name="max_photos">Maximum 5 photos allowed</string>
    <string name="form_submitted">Form submitted</string>
    <string name="speak_now">Speak now</string>
    <string name="voice_input_not_supported">Voice input not supported</string>
    <string name="photo">Photo</string>
    <string name="delete_photo">Delete Photo</string>

    <string name="finish_task">Finish Task</string>
    <string name="finish_task_confirmation">Are you sure you want to finish this task?</string>

    <string name="task_start_date">Start Date</string>
    <string name="task_start_time">Start Time</string>
    <string name="task_end_date">End Date</string>
    <string name="task_end_time">End Time</string>

    <string name="task_photos">Task Photos</string>

    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="change_password">Change Password</string>
    <string name="password_change_success">Password changed successfully. Please log in again.</string>
    <string name="password_change_failed">Password change failed.</string>
    <string name="invalid_password">Password must be at least 8 characters long and contain both letters and numbers.</string>
    <string name="confirm_password_change">Are you sure you want to change your password?</string>

    <string name="completion_rate">Completion Rate: %d%%</string>
    <string name="total_tasks">Total Tasks: %d</string>
    <string name="completed_tasks">Completed Tasks: %d</string>
    <string name="average_task_duration">Average Task Duration: %.2f min</string>

    <string name="weather_info">Weather in %s: %.2f°C, %s</string>

</resources>
