<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn='navigation_view'>

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_dashboard_24"
            android:title="@string/nav_home"/>

        <item
            android:id="@+id/nav_requested"
            android:icon="@drawable/baseline_insert_drive_file_24"
            android:title="@string/nav_requested"/>

        <item
            android:id="@+id/nav_started"
            android:icon="@drawable/baseline_work_24"
            android:title="@string/nav_started"/>

        <item
            android:id="@+id/nav_completed"
            android:icon="@drawable/baseline_task_alt_24"
            android:title="@string/nav_completed"/>

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/nav_settings"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/nav_logout"/>

    </group>

</menu>
