<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:gravity="bottom"
    android:padding="16dp"
    android:background="@color/tech_blue_gray"
    android:theme="@style/ThemeOverlay.AppCompat.Dark"
    >

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_content_description"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:text="@string/created_by"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:layout_marginBottom="16dp"/>

</LinearLayout>
